# robot_model

./: CMakeLists.txt  package.xml  wks.yml
automated_tests/: CameraModel.cpp  HumanoidModel.cpp  cameraModelTest.json  humanoidTest.urdf
include/robot_model/: camera_model.h  humanoid_model.h  humanoid_server.h  leg_ik.h  robot_model.h
proto/: humanoid_model.proto
src/: main.cpp
src/robot_model/: camera_model.cpp  humanoid_model.cpp  humanoid_server.cpp  leg_ik.cpp  robot_model.cpp
