<?xml version="1.0"?>
<package>
  <name>robot_model</name>
  <version>0.0.0</version>
  <description>A lightweight repository for model of humanoid robot based on RBDL</description>

  <maintainer email="g.passault@gmail.com">Grégoire Passault</maintainer>
  <author email="g.passault@gmail.com">Grégoire Passault</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ZeroMQ</build_depend> <!-- rhobandeps/libzmq -->
  <build_depend>rbdl_urdfreader</build_depend> <!-- rhobandeps/rbdl -->
  <build_depend>rhoban_geometry</build_depend> <!-- rhoban/geometry -->

  <run_depend>ZeroMQ</run_depend>
  <run_depend>rbdl_urdfreader</run_depend>
  <run_depend>rhoban_geometry</run_depend> -->

  <export>
  </export>
</package>
